@@ -1,3 +1,7 @@
+=== UNRELEASED / 2009-06-28
+
+* Implement overwrite, a method to safely replace a file.
+
 === 0.0.3 / 2009-06-28
 
 * Rename checking_exit_status as fork_and_check to make it clear it forks.
